objects/Web_Service_Keys__c.object
<CustomObject>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>